# portty

./: CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  test-portals.html
.github/workflows/: ci.yml  release.yml
crates/builtins/: Cargo.toml
crates/builtins/src/: file_chooser.rs  lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  daemon_socket.rs  main.rs  server.rs  session.rs
crates/daemon/src/dbus/: file_chooser.rs  mod.rs  screenshot.rs
crates/daemon/src/portal/: file_chooser.rs  mod.rs  screenshot.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: daemon.rs  ipc.rs  lib.rs  portal_type.rs  protocol.rs  queue.rs  session.rs
crates/ipc/src/ipc/: context.rs  file_chooser.rs  screenshot.rs
crates/ipc/src/portal/: mod.rs  screenshot.rs
crates/lib/: Cargo.toml
crates/lib/src/: client.rs  codec.rs  files.rs  lib.rs  paths.rs  protocol.rs
crates/lib/src/portal/: file_chooser.rs  intent.rs  mod.rs  screenshot.rs
crates/types/: Cargo.toml
crates/types/src/: ipc.rs  lib.rs  request.rs
crates/types/src/ipc/: file_chooser.rs
crates/types/src/portal/: file_chooser.rs
misc/: config.toml.example  org.freedesktop.impl.portal.desktop.tty.service  portty.service  tty.portal
