[workspace]
resolver = "3"
members = ["crates/lib", "crates/daemon", "crates/cli"]

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://projects.werdxz.info/portty"
repository = "https://github.com/WERDXZ/portty"
readme = "README.md"
keywords = ["xdg-desktop-portal", "terminal"]
