[package]
name = "porttyd"
version = "0.2.0"
description = "xdg-desktop-portal backend daemon for TTY sessions"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["os::linux-apis"]

[[bin]]
name = "porttyd"
path = "src/main.rs"

[dependencies]
libportty = { path = "../lib", version = "0.2.0" }
zbus = "5.12.0"
zvariant = { version = "5.8.0", features = ["option-as-array"] }
futures-util = "0.3"
blocking = "1"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
