[package]
name = "portty-ipc"
version = "0.2.0"
edition = "2024"

[dependencies]
zbus = "5.12.0"
zvariant = { version = "5.8.0", features = ["option-as-array"] }
futures-util = "0.3"
bincode = { version = "2", features = ["derive"] }
# Needed for zbus/zvariant D-Bus serialization
serde = { version = "1", features = ["derive"] }
thiserror = "2"
