[package]
name = "libportty"
version = "0.2.1"
description = "Shared types, protocol, and client library for portty - build your own custom frontend for portty"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["os::linux-apis"]

[features]
default = ["portal-file-chooser", "portal-screenshot"]
portal = ["dep:serde_json"]
portal-file-chooser = ["portal", "dep:url"]
portal-screenshot = ["portal"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
url = { version = "2", optional = true }
